--- a/MatchupsExportESPNAPI.ipynb
+++ b/MatchupsExportESPNAPI.ipynb
@@ -49,8 +49,8 @@
     "team_response = requests.get(url, params={\"view\": \"mTeam\"})\n",
     "\n",
     "# Transform the response into a json\n",
-    "matchup_json = matchup_response.json()[0]\n",
-    "team_json = team_response.json()[0]"
+    "matchup_json = matchup_response.json()\n",
+    "team_json = team_response.json()"
    ]
   },
   {
@@ -61,9 +61,9 @@
    "outputs": [],
    "source": [
     "# Transform both of the json outputs into DataFrames\n",
-    "matchup_df = pd.json_normalize(matchup_json['schedule'])\n",
+    "matchup_df = pd.json_normalize(matchup_json[0]['schedule'])\n",
     "\n",
-    "team_df = pd.json_normalize(team_json['teams'])"
+    "team_df = pd.json_normalize(team_json[0]['teams'])"
    ]
   },
   {
