--- a/MatchupsExportESPNAPI.ipynb
+++ b/MatchupsExportESPNAPI.ipynb
@@ -10,12 +10,21 @@
     "# Dependencies\n",
     "import requests\n",
     "import pandas as pd"
-   ],
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "656de315-166e-4070-b6ce-a853043cc979",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ESPN league id: 730129\n",
+      "Enter the year for the data you would like to pull: 2021\n"
+     ]
     }
    ],
    "source": [
