--- a/MatchupsExportESPNAPI.ipynb
+++ b/MatchupsExportESPNAPI.ipynb
@@ -17,6 +17,16 @@
    "execution_count": 2,
    "id": "656de315-166e-4070-b6ce-a853043cc979",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ESPN league id: 730129\n",
+      "Enter the year for the data you would like to pull: 2021\n"
+     ]
+    }
+   ],
    "source": [
     "# Define URL parameters\n",
     "league_id = input('Enter your ESPN league id:')\n",
